<resources>
    <string name="app_name">GonDialer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multi">*</string>
    <string name="divide">/</string>
    <string name="leftp">(</string>
    <string name="rightp">)</string>
    <string name="sharp">#</string>
    <string name="dot">.</string>
    <string name="calltxt">Call</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
</resources>
